@@ -1,7 +1,5 @@
 package org._java_proj.gym_management_system.features.manageAttendance.service.impl;
 
-
-
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -14,23 +12,17 @@ import org._java_proj.gym_management_system.features.manageAttendance.service.At
 import org._java_proj.gym_management_system.model.Attendance;
 import org._java_proj.gym_management_system.model.User;
 import org._java_proj.gym_management_system.model.Profile;
-import org._java_proj.gym_management_system.common.constant.AttendanceType; // Corrected import
+// Corrected import
 import org._java_proj.gym_management_system.features.users.repository.UserRepository;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.time.Duration;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class AttendanceServiceImpl implements AttendanceService {
-    private final PasswordEncoder passwordEncoder;
     private final AttendanceRepository attendanceRepository;
     private final UserRepository userRepository;
 
@@ -44,13 +36,7 @@ public class AttendanceServiceImpl implements AttendanceService {
         attendance.setUser(user);
         attendance.setDate(request.getDate());
         attendance.setTimeIn(request.getTimeIn());
-        attendance.setAttendanceType(request.getAttendanceType());
-
-        if (request.getAttendanceType() == AttendanceType.TRAINER) {
-            attendance.setHoursWorked(request.getHoursWorked());
-        } else if (request.getAttendanceType() == AttendanceType.USER) {
-            attendance.setPackageDays(request.getPackageDays());
-        }
+        attendance.setHoursWorked(request.getHoursWorked());
 
         Attendance savedAttendance = attendanceRepository.save(attendance);
         AttendanceResponseDto dto = mapToDto(savedAttendance);
@@ -81,14 +67,14 @@ public class AttendanceServiceImpl implements AttendanceService {
     @Override
     public ApiResponse listAllAttendances() {
         List<Attendance> attendances = attendanceRepository.findAll();
-        List<AttendanceResponseDto> dtos = attendances.stream()
+        List<AttendanceResponseDto> dto = attendances.stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return ApiResponse.builder()
                 .success(1)
                 .code(HttpStatus.OK.value())
-                .data(Map.of("attendances", dtos))
+                .data(Map.of("attendances", dto))
                 .message("All attendance records fetched.")
                 .build();
     }
@@ -99,14 +85,14 @@ public class AttendanceServiceImpl implements AttendanceService {
                 .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userId));
 
         List<Attendance> userAttendances = attendanceRepository.findByUser(user);
-        List<AttendanceResponseDto> dtos = userAttendances.stream()
+        List<AttendanceResponseDto> dto = userAttendances.stream()
                 .map(this::mapToDto)
                 .toList();
 
         return ApiResponse.builder()
                 .success(1)
                 .code(HttpStatus.OK.value())
-                .data(Map.of("attendances", dtos))
+                .data(Map.of("attendances", dto))
                 .message("Attendance records for user fetched.")
                 .build();
     }
@@ -161,6 +147,26 @@ public class AttendanceServiceImpl implements AttendanceService {
                 .build();
     }
 
+
+    @Override
+    public ApiResponse getTotalHoursWorkedByUser(Long userId) {
+        userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found with ID: " + userId));
+
+        Double totalHours = attendanceRepository.getTotalHoursWorkedByUser(userId);
+
+        return ApiResponse.builder()
+                .success(1)
+                .code(HttpStatus.OK.value())
+                .data(Map.of(
+                        "userId", userId,
+                        "totalHoursWorked", totalHours
+                ))
+                .message("Total hours worked calculated successfully.")
+                .build();
+    }
+
+
     private AttendanceResponseDto mapToDto(Attendance attendance) {
         AttendanceResponseDto dto = new AttendanceResponseDto();
         dto.setId(attendance.getId());
@@ -182,13 +188,6 @@ public class AttendanceServiceImpl implements AttendanceService {
             if (attendance.getUser().getRole() != null) {
                 dto.setUserRole(attendance.getUser().getRole().getName());
             }
-        }
-
-        if (attendance.getTimeIn() != null && attendance.getTimeOut() != null) {
-            Duration duration = Duration.between(attendance.getTimeIn(), attendance.getTimeOut());
-            dto.setDurationInMinutes(duration.toMinutes());
-        } else {
-            dto.setDurationInMinutes(null);
         }
 
         return dto;
